--- a/index.html
+++ b/index.html
@@ -8,18 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-        <header>
-            <p>Simple Mobile Site</p>
-        </header>
-        
-     </div>
+   <div class="box">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact Us</a></li>
+
+        </ul>
+    </nav>
+   </div>
 </body>
 </html>
